MenuBar fixed on FF2 and IE7 Still a bunch of work on IE6

--- a/trunk/src/jplex/components/calendar/assets/calendar-ie6.css
+++ b/trunk/src/jplex/components/calendar/assets/calendar-ie6.css
@@ -6,3 +6,8 @@ input.calendar-button {
 	margin-left:0.2em;
 	width:30px;
 }
+
+div.calendar td {
+    border: 0;
+    padding:1px;
+}
